styles/style.css
/* ... */
.btn--text {
  padding: 0.8rem;
  border: 0;
  text-decoration: underline;
}
.btn--text:hover, .btn--text:active, .btn--text:focus {
  text-decoration: none;
  background-color: transparent;
  box-shadow: none;
}

.bg-brand-tertiary .btn--text, .bg-brand-secondary .btn--text {
  color: #fff;
}

.bg-white .btn--text, .bg-brand-primary .btn--text {
  color: #191718;
}

.btn--fab {
  border-radius: 50%;
  display: flex;
  text-align: center;
  justify-content: flex-end;
  padding: 0.4rem;
  position: fixed;
  bottom: 2.4rem;
  right: 1.6rem;
  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.3);
}
.btn--fab > button {
  background-image: url(../images/darkmode.svg);
  background-repeat: no-repeat;
  background-size: 100% auto;
  width: 3rem;
  height: 3rem;
  color: #f3d849;
  padding: 0.4rem 0.8rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.dark .btn--fab > button {
  background-position: center bottom;
}

.separator {
  padding: 1.6rem 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1;
  padding: 2.4rem 0;
}
.separator:after, .separator:before {
  content: "";
  border-width: 1px;
  max-height: 2px;
  border-style: solid;
  display: block;
  opacity: 0.18;
  width: 30%;
}
.separator:before {
  content: "";
  margin-right: 0.8rem;
}
.separator:after {
  content: "";
  margin-left: 0.8rem;
}

/*--------------------- Margin Top */
.form-group + .form-group {
  margin-top: 0.8rem;
}

.form-group-s + .form-group-s {
  margin-top: 0.4rem;
}
.form-group-m + .form-group-m {
  margin-top: 1.2rem;
}
.form-group-l + .form-group-l {
  margin-top: 1.6rem;
}

.form-group[data-state] .form-group__msg {
  opacity: 0;
  margin-top: 0.3rem;
}
.form-group[data-state] .form-group__msg .icon {
  font-size: 1.2rem;
  min-width: 1.2rem;
  min-height: 1.2rem;
}
.form-group[data-state] [data-state-icon] {
  display: none;
}
.form-group[data-state=error] .form-group__msg, .form-group[data-state=success] .form-group__msg, .form-group[data-state=info] .form-group__msg, .form-group[data-state=warning] .form-group__msg {
  opacity: 1;
  color: #666;
}
.form-group[data-state=error] .form-group__msg {
  color: #D82323;
}
.form-group[data-state=error] [data-state-icon=error] {
  display: block;
}
.form-group[data-state=success] .form-group__msg {
  color: #2E7D32;
}
.form-group[data-state=success] [data-state-icon=success] {
  display: block;
}
.form-group[data-state=info] .form-group__msg {
  color: #666;
}
.form-group[data-state=info] [data-state-icon=info] {
  display: block;
}
.form-group[data-state=warning] .form-group__msg {
  color: #E6A200;
}
.form-group[data-state=warning] [data-state-icon=warning] {
  display: block;
}

.form-inline .form-inline__action, .form-inline .form-inline__suffix, .form-inline .form-inline__prefix {
  display: flex;
  align-items: center;
}
.form-inline .form-inline__action {
  cursor: pointer;
}
.form-inline--right .form-inline__action, .form-inline--right .form-inline__suffix {
  transform: translateX(-100%);
}
.form-inline--right input[type=text], .form-inline--right input[type=tel], .form-inline--right input[type=number] {
  padding-right: 4rem;
}
.form-inline--left .form-inline__action, .form-inline--left .form-inline__prefix {
  transform: translateX(100%);
}
.form-inline--left .form-inline__action > .icon, .form-inline--left .form-inline__prefix > .icon {
  margin-top: 1px;
}
.form-inline--left input[type=text], .form-inline--left input[type=tel], .form-inline--left input[type=number] {
  padding-left: 4.2rem;
}

.tag {
  display: inline-flex;
  align-items: center;
  padding: 0.56rem 1.2rem;
  border-radius: 1.6rem;
  font-size: 1rem;
  line-height: 1;
  font-family: "Montserrat", Arial, Helvetica, sans-serif;
  font-weight: 600;
}
.tag + .tag {
  margin-left: 0.8rem;
  margin-bottom: 0.8rem;
}

.list--secondary li::marker {
  color: #4285f4;
}

.list--tertiary li::marker {
  color: #191718;
}

.list--white li::marker {
  color: #fff;
}

.pull-right--xs {
  margin-right: -0.4rem;
}
.pull-right--s {
  margin-right: -0.8rem;
}
.pull-right--m {
  margin-right: -1.2rem;
}
.pull-right--l {
  margin-right: -1.6rem;
}
.pull-left--xs {
  margin-left: -0.4rem;
}
.pull-left--s {
  margin-left: -0.8rem;
}
.pull-left--m {
  margin-left: -1.2rem;
}
.pull-left--l {
  margin-left: -1.6rem;
}

.input-suggestion {
  position: relative;
}
.input-suggestion__list {
  position: absolute;
  left: 0;
  top: 100%;
  width: 100%;
  border-radius: 0 0 0.8rem 0.8rem;
  overflow: hidden;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
  z-index: 1;
  max-height: 30vh;
  overflow: auto;
}
.heading-style-bbottom:after {
  content: "";
  display: block;
  width: 3.2rem;
  height: 2px;
  background: #f3d849;
  position: relative;
  left: 50%;
  transform: translate(-50%, 0.8rem);
  box-shadow: 0px 0px 0 1px #efd12f;
  border: 0;
}

.layout-2-col {
  padding: 2.4rem 0;
}
.layout-2-col .img-container {
  margin-left: -1.6rem;
  margin-right: -1.6rem;
  overflow: hidden;
  border-radius: 0 3.6rem 3.6rem 0;
  transform: translateX(-1.6rem);
}

.layout-2-col div[class*=reverse-] .img-container {
  border-radius: 3.6rem 0 0 3.6rem;
  transform: translateX(1.6rem);
}

@media only screen and (min-width: 1024px) {
  .layout-2-col {
    padding: 3rem 0;
  }
  .layout-2-col .container {
    position: relative;
    max-width: 1920px;
  }
  .layout-2-col .img-container {
    margin-left: -1.6rem;
    margin-right: 0;
    transform: none;
  }
  .layout-2-col .img-container img {
    height: auto;
    max-height: 100%;
    width: auto;
  }

  .layout-2-col div[class*=reverse-] .img-container {
    margin-left: 0;
    margin-right: -1.6rem;
    transform: none;
  }
}
.flip-img {
  transform: scaleX(-1);
}

.cursor-pointer {
  cursor: pointer;
}

#day-light-toggle {
  color: #f3d849 !important;
}
#day-light-toggle .material-icons {
  opacity: 1;
}
/* ... */

